<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        tools:context=".DetailActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Name Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/detail_label_overview"/>

                <!-- Name Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_price"/>

            </LinearLayout>


            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_item_painter"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Painting Name"
                    android:inputType="textCapWords"/>

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="$0.00"
                    android:inputType="numberDecimal"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Quantity Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_quantity"/>

                <!-- Sold Label -->
                <TextView
                    android:id="@+id/text_amount_sold"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_label_sold"/>

            </LinearLayout>


            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_item_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:id="@+id/item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    tools:text="0"/>

                <!-- Item Sold field -->
                <TextView
                    android:id="@+id/item_sold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    tools:text="0"/>

                <Button
                    android:id="@+id/btn_item_add_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Sale\n(-1 quantity)"/>

                <Button
                    android:id="@+id/btn_item_receive_shipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Receive Shippment\n(+1 quantity)"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Gender category -->
        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:id="@+id/textView"
                style="@style/CategoryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_label_picture"/>

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_item_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_button_add_image"/>

                <ImageView
                    android:id="@+id/img_item_painting"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="14dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label Supplier -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_label_supplier"/>

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Supplier Name field -->
                <EditText
                    android:id="@+id/edit_item_supplier"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_hint_supplier"
                    android:inputType="textCapWords"/>

                <!-- Supplier Number field -->
                <EditText
                    android:id="@+id/edit_item_supplier_email"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_hint_supplier_email"
                    android:inputType="textEmailAddress"/>

                <Button
                    android:id="@+id/btn_item_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_button_ordersupplies"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>